<resources>
    <string name="app_name">HealthGuard</string>
    <string name="user_name">Nombre</string>
    <string name="bienvenido">Bienvenido a HealthGuard</string>
    <string name="log_in">Log In</string>
    <string name="Join">Join</string>
    <string name="sign_up">Sign Up</string>
    <string name="profesional">Profesional de la salud</string>
    <string name="paciente">Paciente</string>
    <string name="email">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="Confcontrase_a">Confirmar Contraseña</string>
    <string name="careconnect">CareConnect</string>
    <string name="TvhaveAccount">¿Tienes una cuenta?</string>
    <string name="TvredirLog_in">Log in</string>
    <string name="no_cuenta">¿No tienes una cuenta?</string>
    <string name="sacar_cita">Sacar Cita</string>
    <string name="SacarCita">TODO</string>
    <string name="HistorialMedico">TODO</string>
    <string name="btSacarCita">Button</string>
    <string name="que_necesitas">¿Qué necesitas?</string>
    <string name="ajustes">Ajustes</string>
    <string name="perfil">Perfil</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="inicio">Inicio</string>
    <string name="bienvenidotv">Bienvenido</string>
    <string name="icono_menu">TODO</string>
    <string name="menu">Menú</string>
    <string name="leer">Leer</string>
    <string name="ingresos_pagos">Ingresos y Pagos</string>
    <string name="leerInfo">Leer</string>
    <string name="editarinfo">Revisa o edita tu descripción personal</string>
    <string name="Titulo">Perfil</string>
    <string name="NombreEjemplo">Camilo Alberto Cortés Montejo</string>
    <string name="fechaEjemplo">01 / 01 / 1946</string>
    <string name="numeroEjemplo">989 710 635</string>
    <string name="historialMedico">Historial Médico</string>
    <string name="HMedicoInfo">Revisa tu historial médico</string>
    <string name="informacionPersonal">Información Personal</string>
    <string name="restablecerContraseña">Restablecer contraseña</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="photo">TODO</string>
    <string name="imgRestablecerContra">TODO</string>
    <string name="tvfechapacientehistorial">tvFechaPacienteHistorial</string>
    <string name="actualizar_informacion_historial">Actualizar Información</string>
    <string name="aviso_historial">El historial medico aun no se ha ingresado a la plataforma</string>
    <string name="adjuntar_historial">Adjuntar Historial</string>
    <string name="tvnombrepaciente">tvNombrePaciente</string>
    <string name="guardarHistorialResumen">Guardar</string>
    <string name="alergiasSrcImage">Alergias</string>
    <string name="antecedentesSrcImage">Antecedentes</string>
    <string name="alturaHistorial">Altura:</string>
    <string name="alturaHistorialResumen">1.72 m</string>
    <string name="masaCorporalHistorialResumen">55 Kg</string>
    <string name="masaCorporalHistorial">Masa Corporal:</string>
    <string name="pesoHistorialResumen">55 Kg</string>
    <string name="pesoHistorial">Peso:</string>
    <string name="infogeneralSrcImage">InfoGeneral</string>
    <string name="photoHistorialSrcImage">Photo</string>
    <string name="settingsSrcImage">Settings</string>
    <string name="seleccione_la_fecha">Seleccione la fecha</string>
    <string name="seleccione_el_horario">Seleccione el horario</string>
    <string name="siguiente">Siguiente</string>
    <string name="cita">Cita</string>
    <string name="confirmar">Confirmar</string>
    <string name="precio">S/ 75.00 PEN</string>
    <string name="monto_total">Monto total</string>
    <string name="ej_rodolfo_rivera">Ej. Rodolfo Rivera</string>
    <string name="tus_datos_de_pago">Tus datos de pago</string>
    <string name="titular_de_la_tarjeta">Titular de la tarjeta</string>
    <string name="n_mero_de_la_tarjeta">Número de la tarjeta</string>
    <string name="fecha_de_vencimiento">Fecha de vencimiento</string>
    <string name="cvv">CVV</string>
</resources>